[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "onotation"
version = "0.0.0"
description = "Because O(n²) should be a choice, not a surprise!"
license = "MIT"
authors = ["Sergei Y. Bogdanov <syubogdanov@outlook.com>"]
maintainers = ["Sergei Y. Bogdanov <syubogdanov@outlook.com>"]
readme = "README.md"
homepage = "https://github.com/syubogdanov/onotation"
repository = "https://github.com/syubogdanov/onotation"
documentation = "https://onotation.readthedocs.io"
keywords = [
    "algorithm",
    "c",
    "collections",
    "data-structure",
    "python",
    "python3",
    "tree",
]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",
    "Typing :: Typed",
]

[tool.poetry.dependencies]
python = ">=3.11"

[tool.poetry.group.lint]
optional = true

[tool.poetry.group.lint.dependencies]
black = "^25.9"
mypy = "^1.18"
ruff = "^0.14"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^8.4"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
disallow_any_unimported = true
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
explicit_package_bases = true
no_implicit_optional = true
python_version = "3.11"
strict_equality = true
warn_unused_ignores = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
ignore = [
    "A005",    # Module {name} shadows a Python standard-library module.
    "ANN401",  # Dynamically typed expressions (typing.Any) are disallowed in {name}.
    "BLE001",  # Checks for `except` clauses that catch all exceptions.
    "D100",    # Missing docstring in public module.
    "D104",    # Missing docstring in public package.
]
select = ["ALL"]

[tool.ruff.lint.isort]
lines-after-imports = 2
lines-between-types = 1

[tool.ruff.lint.per-file-ignores]
"docs/**/*.py" = ["ALL"]
"tests/**/test_*.py" = ["S101"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"
